fixed background image tiling bug on smaller screens, fixed IObar search to save the query if you search from an association page

--- a/src/app.less
+++ b/src/app.less
@@ -33,7 +33,7 @@ section.ant-layout {
 @media only screen and (max-width: 400px) {
   .ant-layout-content {
     background-position-x: center;
-    background-size: cover;
-    height: 100vh;
+    // background-size: cover;
+    // height: 100vh;
   }
 }
